--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -3,7 +3,7 @@
 
 .form {
   @include flex(column, wrap, flex-start, stretch);
-  gap: 15px;
+  gap: 30px;
   flex: 1;
   width: 100%;
 
@@ -43,7 +43,7 @@
     }
 
     .mat-mdc-form-field-error-wrapper {
-      padding: 3px 0 5px 0;
+      padding: 8px 0 0 0;
     }
 
     &.mat-mdc-form-field {
@@ -78,6 +78,6 @@
   }
 
   @include tablet-lg {
-    gap: 8px;
+    gap: 20px;
   }
 }
